--- a/my-work/week 1/coding-foundation/style.css
+++ b/my-work/week 1/coding-foundation/style.css
@@ -3,9 +3,10 @@ body{
 }
 
 .box1 {
-  width:200px;
-  height:200px;
-  color: white;
-  display: block;
-	float:left;
+  { width: 500px;
+    height: 500px;
+    margin-top: 50px;
+    color: white;
+    margin-left: auto;
+    margin-right: auto;
 }
