--- a/my-work/week 1/coding-foundation/style.css
+++ b/my-work/week 1/coding-foundation/style.css
@@ -6,6 +6,6 @@ body{
   { width: 500px;
     height: 500px;
     margin-top: 50px;
-    color: white;
+    background-color: white;
     z-index: 100000;
 }
