--- a/my-work/week 1/coding-foundation/style.css
+++ b/my-work/week 1/coding-foundation/style.css
@@ -5,6 +5,17 @@ body{
 .box1
   { width: 10px;
     height: 10px;
+    left: 10px;
     margin-top: 10px;
     background-color: white;
+    /* position: float; */
+}
+
+#button {
+  margin-top: 100px;
+  margin-left: 500px;
+}
+
+#number {
+  margin-top: 100px;
 }
