--- a/my-work/week 1/page1/style.css
+++ b/my-work/week 1/page1/style.css
@@ -1,10 +1,9 @@
-/* body{
-  background-color:lightpink;
-} */
+ body{
+  background-color:beige;
+}
 
 .bar{
   height: 50px;
-  width: 100px;
   background-color: lightblue;
   margin-bottom: 5px;
 }
