--- a/my-work/week 2/Homework 1/style.css
+++ b/my-work/week 2/Homework 1/style.css
@@ -1,9 +1,10 @@
 body{
- background-color:beige;
+ background-color:white;
+ color: black;
 }
 
 .bar{
  height: 50px;
- background-color: lightblue;
+ background-color: yellow;
  margin-bottom: 5px;
 }
