--- a/my-work/week 5/datazine project/styleBack.css
+++ b/my-work/week 5/datazine project/styleBack.css
@@ -2,52 +2,18 @@ body{
   font: 12px 'Helvetica';
   background-color: white;
 }
-
-
-.Tuesday{
-  padding-left: 15px;
-  color: black;
-  font: 20px 'HanziPen SC';
-  position:absolute;
-  top: 120px;
+#header{
+position: absolute;
 }
 
-.Wednesday{
+#compLife{
   padding-left: 15px;
-  color: black;
-  font: 20px 'HanziPen SC';
-  position:absolute;
-  top: 220px;
+position:absolute;
+width: 1200px;
 }
 
-.Thursday{
-  padding-left: 15px;
-  color: black;
-  font: 20px 'HanziPen SC';
-  position:absolute;
-  top: 320px;
-}
-
-.Friday{
-  padding-left: 15px;
-  color: black;
-  font: 20px 'HanziPen SC';
-  position:absolute;
-  top: 420px;
-}
-
-.Saturday{
-  padding-left: 15px;
-  color: black;
-  font: 20px 'HanziPen SC';
-  position:absolute;
-  top: 520px;
-}
-
-.Sunday{
-  padding-left: 15px;
-  color: black;
-  font: 20px 'HanziPen SC';
-  position:absolute;
-  top: 620px;
+#compOnline{
+position:absolute;
+width: 1170px;
+text-align: right;
 }
