--- a/my-work/week 5/datazine project/setup/setup.css
+++ b/my-work/week 5/datazine project/setup/setup.css
@@ -1,7 +1,7 @@
 body{
   margin:0;
   /* background-color: lightgrey; */
-  margin-top:36px;
+  /* margin-top:36px; */
 }
 .page{
   outline: 1px grey solid;
